// Build plugins
plugins {
    id 'java'
    id 'idea'
    id 'jacoco'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.node-gradle.node' version '7.1.0'
    id 'io.gatling.gradle' version '3.14.9'
    id 'com.gorylenko.gradle-git-properties' version '2.5.4'
}

// Java
java {
    toolchain { languageVersion = JavaLanguageVersion.of(25) }
}

// Spring Boot
springBoot { buildInfo() }
bootBuildImage {
    environment['BPE_DELIM_JAVA_TOOL_OPTIONS'] = ' '
    environment['BPE_APPEND_JAVA_TOOL_OPTIONS'] = '--add-opens=java.base/java.lang=ALL-UNNAMED'
}
bootRun.jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
gitProperties { failOnNoGitDirectory = false }
jar { enabled = false }

// Node/NPM
//node {
//    version = '24.11.0'
//    download = true
//    nodeProjectDir = file('ui')
//    npmInstallCommand = "ci"
//}
//tasks.register('npmBuild', NpmTask) {
//    dependsOn npmInstall
//    npmCommand = ['run', 'build-prod']
//}
//processResources.dependsOn(npmBuild)
//test.dependsOn(npm_test)
sourceSets { main.resources.srcDirs 'ui/dist' }
//clean { delete 'ui/dist' }

// Tests
jacoco.toolVersion '0.8.14'
jacocoTestReport.reports.html.outputLocation.set(layout.buildDirectory.dir('reports/coverage/test'))
tasks.named('test', Test).configure {
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
    finalizedBy jacocoTestReport
}

// Project dependencies
repositories { mavenCentral() }
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation      'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation      'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation      'org.springframework.boot:spring-boot-starter-data-ldap'
    implementation      'org.springframework.boot:spring-boot-starter-actuator'
    implementation      'org.springframework.boot:spring-boot-starter-security'
    implementation      'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-authorization-server'
    implementation      'com.unboundid:unboundid-ldapsdk'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
    implementation      'com.opencsv:opencsv:5.12.0'
    implementation      'io.github.resilience4j:resilience4j-bulkhead:2.3.0'
    implementation      'io.github.resilience4j:resilience4j-spring-boot2:2.3.0'
    compileOnly         'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    developmentOnly     'org.springframework.boot:spring-boot-devtools'
    runtimeOnly         'com.h2database:h2'
    runtimeOnly         'com.oracle.database.jdbc:ojdbc11'
    testImplementation  'org.junit.vintage:junit-vintage-engine'
    testImplementation  'org.springframework.boot:spring-boot-starter-test'
    testImplementation  'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation  'org.springframework.security:spring-security-test'
}
